imports, functional and class component work now

--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 /* added #root */
-body,
+/* body,
+#root  */
+
+/* body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  align-items: center;
+  background-color: tomato;
+} */
+
 #root {
   display: flex;
   flex-direction: column;
